syntax = "proto3";

package com.example.ajaxproject;

option java_multiple_files = true;

message User {
  string id = 1;
  string email = 2;
  string password = 3;
}

message UserList {
  repeated User user = 1;
}

