syntax = "proto3";

package com.example.ajaxproject;

import "com/example/ajaxproject/user.proto";

service UserService {

  rpc getAll(GetAllUsersRequest) returns (GetAllUsersResponse);

  rpc getById(GetByIdUserRequest) returns (GetByIdUserResponse);

  rpc createUser(CreateUserRequest) returns (CreateUserResponse);
}
